--- a/Maqueta2/css/estilos.scss
+++ b/Maqueta2/css/estilos.scss
@@ -1,6 +1,15 @@
-body{
-    margin:0;
+@font-face{
+    font-family: mitipo;
+    src: url(../font/AlexandriaFLF.woff);
+   
 }
+body{
+    
+    margin:0;
+    font-family: mitipo;
+
+}
+
 
 nav {
     background:#16A085;
@@ -55,6 +64,24 @@ nav {
     width: 400px;
     display: inline-block;
     vertical-align: top;
+}
+
+.dos_col .col_right ul{
+    padding: 0px;
+}
+
+.dos_col .col_right a{
+    color: #333333;
+}
+
+.dos_col .col_right a:hover{
+    text-decoration: none;
+
+}
+
+.dos_col .col_right li{
+    list-style: none;
+    margin-bottom: 10px;
 }
 
 .tres_col{
